configuration done and created tables for saving the data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#server_url=ssl:
+#user_name=
+#password=
+#server.port=8888
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/mqtt
+spring.datasource.username=akhil
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
